--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,10 @@
-openai==0.27.0
-autopep8==1.6.0
-python-telegram-bot==20.0a6
-SQLAlchemy==1.4.44
+python-telegram-bot==21.6
+langchain==0.3.1
+langchain-community==0.3.1
+langchain-openai==0.2.1
+langgraph==0.2.34
+python-dotenv==1.0.1
+openai==1.51.0
+bs4==0.0.2
+tiktoken==0.7.0
+faiss-cpu==1.8.0.post1
