--- a/env.sample
+++ b/env.sample
@@ -2,3 +2,4 @@ TELEGRAM_TOKEN="your telegram token"
 OPENAI_API_KEY="your openai api key"
 BOTNAME="your bots name"
 TAVILY_API_KEY="tav api key"
+USERS=allowed users
