add memory agent for conversational . remove all message upsert to vectorstore. update reqs

--- a/env.sample
+++ b/env.sample
@@ -3,3 +3,4 @@ OPENAI_API_KEY="your openai api key"
 BOTNAME="your bots name"
 TAVILY_API_KEY="tav api key"
 USERS=allowed users
+ANTHROPIC_API_KEY="anthropic api key"
