--- a/requirements.txt
+++ b/requirements.txt
@@ -13,3 +13,23 @@ langchain-ollama==0.2.0
 ollama==0.3.3
 llm-adaptive-router==0.1.13
 langchain-anthropic==0.2.3
+python-multipart
+markdown
+colorama
+beautifulsoup4
+colorama
+md2pdf
+arxiv
+PyMuPDF
+requests
+jinja2
+aiofiles
+mistune
+python-docx
+htmldocx
+lxml_html_clean
+websockets
+unstructured
+json_repair
+json5
+loguru
